AUS-3470 Fix up NVCL graph alignment problems

--- a/project/src/app/modalwindow/modalwindow.scss
+++ b/project/src/app/modalwindow/modalwindow.scss
@@ -72,7 +72,7 @@ div.float-left {
 
 .modal-card-size {
 	width: 100%;
-	height: 430px;
+	height: 600px;
 }
 
 select {
